--- a/pages/publish/index.wxss
+++ b/pages/publish/index.wxss
@@ -1,29 +1,26 @@
 .container {
   padding: 30rpx;
 }
-
 .form-item {
-  margin-bottom: 30rpx;
+  padding: 20rpx;
+  margin-bottom: 20rpx;
+  background: #fff;
+  border-radius: 10rpx;
+  border: 1px solid #ddd;
 }
-
-.label {
-  display: block;
-  margin-bottom: 10rpx;
-  font-weight: bold;
-}
-
-input, textarea, .picker {
+.input {
   width: 100%;
   padding: 20rpx;
+  margin-bottom: 20rpx;
   border: 1px solid #ddd;
   border-radius: 10rpx;
-  box-sizing: border-box;
-  background-color: #fff;
 }
-
-.submit-btn {
-  margin-top: 50rpx;
-  background-color: #ff5f15;
-  color: white;
-  font-weight: bold;
+.btn-publish {
+  width: 100%;
+  height: 88rpx;
+  line-height: 88rpx;
+  background: #07c160;
+  color: #fff;
+  font-size: 32rpx;
+  border-radius: 12rpx;
 }
